# learning

./: README.md  bash_aliases  cleanup.sh  learning.code-workspace  old_run.sh  run.sh  setup_acct.sh  setup_emacs.d-vg.sh  setup_emacs.sh  setup_install_emacs.sh  setup_install_extra.sh  setup_min_bash.sh
c/examples/: linkedList.c
conf/: generateSSHKey.sh  install_packages.sh  setup_emacs.d-vg.sh  setup_install_emacs.sh  setup_install_extra.sh  setup_min_vim.sh
conf/newLinuxVM/: build_gcc.md  configureSSHaccessForWindows.md  generateSSHKey.sh  install_packages.sh  manualWindows_managerConfig.txt  multipleCPP.md  pseudo-ssh-copy-id.md  resizeDisk.md  setup_gh_cli.md  ssh.md  tabby.config
cpp/BinTree/: MyBinTree.cpp  conanfile.py  main.cpp
cpp/DebugPid/: MyDebugPid.hpp  main.cpp
cpp/IntervalMap/: Build.md  CMakeLists.txt  MyIntervalMap.hpp  conanfile.py  main.cpp  mainFinalImKeyVersion.cpp  run.sh
cpp/PlayWithCpp/: CMakeLists.txt  MyPlayWithCpp.hpp  conanfile.py  run.sh
cpp/Sample/: .gitignore  Build.md  MySample.cpp  MySample.hpp  conanfile.py  createNew.sh  main.cpp  renMod.pl
cpp/Sample/gtest/Simple/: CMakeLists.txt
cpp/Sample/gtest/all-googletest-samples/: CMakeLists.txt
cpp/Sample/gtest/all-googletest-samples/9/: CMakeLists.txt
cpp/Sample/gtest/fetch-content/: README.md
cpp/_conan/: installConan.sh
cpp/_conan/profiles/: gcc-debug
cpp/conan/BinTree/: CMakeLists.txt  MyBinTree.hpp  README.md  createNew.sh  main.cpp
cpp/conan/DebugPid/: CMakeLists.txt  Config_Conan.md  MyDebugPid.cpp  conanfile.py  createNew.sh
cpp/conan/IntervalMap/: MyIntervalMap.cpp  conanfile.py  createNew.sh  main.cpp
cpp/conan/PlayWithCpp/: MyPlayWithCpp.cpp  README.md  createNew.sh  data.txt  main.cpp  renMod.pl
cpp/conan/Sample/: CMakeLists.txt  MySample.cpp  MySample.hpp  main.cpp
cpp/conan/testConan/: README.md  conanfile.txt
cpp/cpp_cmake_template/: CMakeLists.txt
cpp/cpp_cmake_template/src/: program.cpp
cpp/cpp_makefile_template/: Makefile  README.md
cpp/cpp_makefile_template/include/module1/: mod1c1.hpp
cpp/cpp_makefile_template/src/: program.cpp
cpp/cpp_makefile_template/src/module1/: mod1c1.cpp
cpp/gtest/Simple/: CMakeLists.txt
cpp/gtest/all-googletest-samples/: CMakeLists.txt
cpp/gtest/all-googletest-samples/1/: CMakeLists.txt
cpp/gtest/all-googletest-samples/10/: CMakeLists.txt
cpp/gtest/all-googletest-samples/2/: CMakeLists.txt
cpp/gtest/all-googletest-samples/3/: CMakeLists.txt
cpp/gtest/all-googletest-samples/4/: CMakeLists.txt
cpp/gtest/all-googletest-samples/5/: CMakeLists.txt
cpp/gtest/all-googletest-samples/6/: CMakeLists.txt
cpp/gtest/all-googletest-samples/7/: CMakeLists.txt
cpp/gtest/all-googletest-samples/8/: CMakeLists.txt
cpp/gtest/fetch-content/: CMakeLists.txt
cpp/gtest/fetch-content-subproj/: CMakeLists.txt
cpp/gtest/fetch-content-subproj/fd/: CMakeLists.txt
cpp/gtest/fetch-content-subproj/fd/tests/: CMakeLists.txt
cpp/gtest/fetch-content-subproj/src/: CMakeLists.txt
cpp/gtest/fetch-content/src/multiply/: CMakeLists.txt  main.cpp
cpp/gtest/fetch-content/tests/: CMakeLists.txt  multiply_test.cpp
cpp/testConan/: README.md  test_conan.cpp
cpp/testConanBase/: .gitignore  CMakeLists.txt  test_conan.cpp
cpp/testConanOrg/: README.md  conanfile.py  conanfile.txt  test_conan.cpp
cpp/vcpkg/: Readme.md
cpp/vcpkg/helloworld/: .gitignore  CMakeLists copy.txt  CMakeLists-old.txt  CMakeLists.txt  CMakePresets.json.example  helloworld.cpp  poco_mysql_demo.cpp  vcpkg copy.json  vcpkg.json
cpp/vcpkg/helloworld/extra/: CMakeUserPresets.json.example
cpp/vcpkg/helloworld/src/: CMakeLists.txt
cpp/vcpkg/helloworld/src/db/: CMakeLists.txt  maria_c_conn_demo.cpp  poco_sqlite_demo.cpp
cpp/vcpkg/helloworld/src/fmt/: CMakeLists.txt  helloworld.cpp
cpp/vscode/: Cpp.code-profile  InstalledExtensions.txt  InstalledExtensionsVersions.txt  Keyboard_Cheatsheets.md  README.md  config  cpp.json  debuggingPrinting.md  installComfig.sh  installConfig.sh  keybindings.json  settings.json  snippets.json
cpp/vscode/profiles-exports/: cpp-profile.code-profile  cpp.code-profile  oldMarlin.code-profile  vince-win-cpp.code-profile  vince-win-mod.code-profile  vince-win.code-profile  vince.code-profile
cpp/vscode/snippets/: default-snippets-manager.code-snippets  default-snippets-manager.code-snippetsS
docker/: docker_cloudguru.txt  docker_cmd.txt
docker/deploying-containerized-applications/02/demos/demo1/: README.md  app-v1.ps1  app-v2.ps1  app-v3.ps1
docker/deploying-containerized-applications/02/demos/demo2/: README.md  docker-compose.yml
docker/deploying-containerized-applications/02/demos/demo3/: README.md  docker-compose.yml  v2.yml
docker/deploying-containerized-applications/02/demos/src/: docker-compose.yml
docker/deploying-containerized-applications/03/demos/demo1/: README.md  docker-compose.yml
docker/deploying-containerized-applications/03/demos/demo2/: README.md  docker-compose.yml
docker/deploying-containerized-applications/03/demos/demo3/: README.md  docker-compose-scale.yml  docker-compose-v2.yml  docker-compose.yml
docker/deploying-containerized-applications/04/demos/demo1/: README.md
docker/deploying-containerized-applications/04/demos/demo2/: README.md
docker/onboarding/: dockerfile
kubernetes/: building_cluster.sh
linux/: resizefs.md
notes/git/: rebase.md
onboarding/: dockerfile~
python/: regex.md  regex_ex1.py
tex/: autodiff.aux  autodiff.fdb_latexmk  autodiff.fls  autodiff.out  autodiff.toc  vg.aux  vg.fdb_latexmk  vg.fls  vg.tex
viEditor/: vi_cmd.md  vi_cmd.txt
visio/: FavoritesVG.vss
vscode/profiles/sync/: Cpp.code-profile  Empty.code-profile  fpga.code-profile  old_Default_python_arduino_marlin.code-profile
vscode/profiles/vince-pc/: cpp.code-profile  default.code-profile  oldMarlin.code-profile  vince-win.code-profile
vscode/profiles/vince2-win10/: Cpp.code-profile  Old_python_arduino_platformio.code-profile  fpga.code-profile  oldMarlin.code-profile
windowsTools/autoHotkey/: Readme.md
(+92 files in other folders)
